# agente-p

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONSTITUTION.md  Info.md  Makefile  README.md  TEAM.md  package.json  skills-lock.json
.claude/: settings.local.json
analysis/: data_inventory.md  rucs_faltantes_sunat.txt
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/src/agenteperry_api/: __init__.py  config.py  main.py
apps/api/src/agenteperry_api/routers/: audit.py  demo.py  dossiers.py  graph.py  health.py
apps/api/src/agenteperry_api/schemas/: models.py
apps/api/src/agenteperry_api/services/: __init__.py  auditor.py  gcs.py  neo4j_reader.py
apps/api/tests/: test_smoke.py
apps/scrapers/: README.md  pyproject.toml  sources.yaml
apps/scrapers/src/agenteperry/: __init__.py  cli.py
apps/scrapers/src/agenteperry/cdc/: __init__.py  detector.py  pipeline.py
apps/scrapers/src/agenteperry/collectors/: __init__.py  base.py  ckan.py  factory.py  ocds.py  oece_collector.py  sanciones.py  seace.py  sunat.py
apps/scrapers/src/agenteperry/db/: client.py
apps/scrapers/src/agenteperry/discovery/: tdr_discovery.py
apps/scrapers/src/agenteperry/graph/: __init__.py  mapping.py  models.py  neo4j_client.py  neo4j_enrichment.py  neo4j_ingestion.py  neo4j_queries.py  neo4j_schema.py
apps/scrapers/src/agenteperry/ocr/: __init__.py  bridge.py  cli.py  minimax_client.py  models.py  pdf_classifier.py  processor.py
apps/scrapers/src/agenteperry/patterns/: __init__.py  coi.py  queries.py
apps/scrapers/src/agenteperry/radar/: __init__.py  cdc.py  cli.py  health.py  models.py  orchestrator.py
apps/scrapers/src/agenteperry/sources/: __init__.py  catalog.py
apps/scrapers/src/agenteperry/sync/: __init__.py  chunks.py  loader.py
apps/scrapers/src/agenteperry/tdr/: __init__.py  auditor.py  chunking.py  dossier.py  downloader.py  embeddings.py  flags.py  index.py  ingestion.py  loader.py  models.py  parsing.py  search.py
apps/scrapers/tests/: test_cdc_detector.py  test_collectors.py  test_graph_mapping.py  test_neo4j_client.py  test_neo4j_ingestion.py  test_neo4j_queries.py  test_neo4j_schema.py  test_ocr_bridge.py  test_ocr_classifier.py  test_ocr_cli.py  test_ocr_processor.py  test_pipeline_audit.py  test_radar_cdc.py  test_radar_health.py  test_radar_orchestrator.py  test_scraping_delivery_scripts.py  test_source_chunks.py  test_sunat_enrichment.py  test_sunat_pipeline.py  test_sync_loader.py  test_tdr_auditor.py  test_tdr_auditor_neo4j.py  test_tdr_chunking.py  test_tdr_dossier.py  test_tdr_downloader.py  test_tdr_flags.py  test_tdr_ingestion.py  test_tdr_loader.py  test_validate_seace_batch.py
apps/scrapers/tests/fixtures/: sunat_padron_sample.txt
docs/: AGENTS_OPENCODE.md  AGENT_DOCUMENT_CORE.md  AGENT_SKILLS.md  AMPLIFIER.md  ARCHITECTURE.md  ARCHITECTURE_AGENTEPERRY.md  AUDITOR_AGENT_EVALUATION.md  BACKEND_UNIFIED_ARCHITECTURE.md  CONFLICT_OF_INTEREST.md  DATA_INVENTORY.md  DATA_REALITY_AUDIT.md  DATA_SOURCES.md  DEMO_CASE_SELECTION.md  (+21 more)
(+139 files in other folders)
