[project]
name = "agenteperry-api"
version = "0.1.0"
description = "FastAPI backend orchestrating document_intelligence + Neo4j graph + GCS data lake"
requires-python = ">=3.11"
authors = [{ name = "NEO Consulting", email = "miguel.arias@neo.com.pe" }]
license = { text = "MIT" }

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.7",
  "pydantic-settings>=2.5",
  "google-cloud-storage>=2.18",
  "neo4j>=5.28",
  "python-dotenv>=1.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "pyright>=1.1",
  "httpx>=0.27",
]
auditor = [
  # Pulled in editable from the monorepo when present.
  # Optional so the API can boot read-only (GCS + Neo4j) without the
  # heavy document_intelligence + langgraph stack installed.
]

[project.scripts]
agenteperry-api = "agenteperry_api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agenteperry_api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
extraPaths = ["src", "../scrapers/src", "../../packages/document_intelligence/src"]
reportMissingTypeStubs = false
