[project]
name = "agenteperry"
version = "0.1.0"
description = "TDR ingestion, parsing and risk-signal scanning for AgentePerry"
requires-python = ">=3.11"
authors = [{name = "Agente Perry", email = "hackaton942@gmail.com"}]
license = {text = "MIT"}

dependencies = [
    # PDF parsing
    "pymupdf>=1.24",
    # DB
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    # Validation / models
    "pydantic>=2.7",
    # CLI
    "click>=8.1",
    "rich>=13.7",
    # Observability
    "structlog>=24.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "vcrpy>=6.0",
    "ruff>=0.5",
    "pyright>=1.1",
    "ipython>=8.0",
    # optional integrations — installed for type checking
    "neo4j>=5.20",
]
ai = [
    "openai>=1.30",
    "anthropic>=0.30",
]
langgraph = [
    "langgraph>=0.2",
]
graph = [
    # Neo4j Aura driver (sync) — SPEC-0012
    "neo4j>=5.20",
]

[project.scripts]
agenteperry = "agenteperry.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agenteperry"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["E501"]

[tool.pyright]
include = ["src"]
strict = ["src/agenteperry"]
pythonVersion = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
